--- a/prove/index.html
+++ b/prove/index.html
@@ -4,21 +4,11 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="initial-scale=1" />
-  <!-- Sets mobile scaling -->
 
   <title>Electromagnetic Spectrum</title>
-  <!-- ADDITIONAL CSS FILES GO HERE -->
 
-  <!-- Standard CSS -->
-  <!-- REDIRECT ALL TO A COMMON FOLDER ON THE SERVER -->
   <link rel="stylesheet" href="https://files.lib.kcvs.ca/kcvsTheme.4.current.min.css" type="text/css" />
-
-  <!-- Central standard CSS for Sliders -->
   <link rel="stylesheet" href="https://files.lib.kcvs.ca/kcvs-slider.min.css" type="text/css" />
-
-  <!-- links to template css document -->
-  <!-- ***Remember to change the name here if you rename the template css document*** -->
-  <!-- Use this to overwrite and update any specific styling -->
   <link rel="stylesheet" href="css/electromagneticSpectrum.css" type="text/css" />
 </head>
 
@@ -47,18 +37,11 @@
     <div id="appletContainer">
 
       <div class="contentContainer">
-        <!-- DO NOT TOUCH -->
-        <!-- Pop Up Windows/items go here -->
         <div id="window" class="displayBox shadow"></div>
-        <!-- DO NOT TOUCH -->
         <div id="bigWindow" class="displayBox shadow"></div>
-        <!-- DO NOT TOUCH -->
         <div class="tooltipwindow"></div>
-        <!-- DO NOT TOUCH -->
-        <!-- End of Pop Up windows -->
 
         <main id="mainContent">
-          <!-- DO NOT TOUCH -->
 
           <h1>Electromagnetic Spectrum</h1>
 
@@ -74,26 +57,16 @@
             <div id="energy" class="energy">Energy = 2.23 (eV)</div>
           </div>
         </main>
-        <!-- Close mainContent -->
       </div>
-      <!-- Close contentContainer-->
     </div>
-    <!-- Close AppletContainer -->
   </div>
-  <!-- Close Wrapper -->
-
-
 
   <!-- Javascript Scripts Go Here -->
-
   <script src="https://files.lib.kcvs.ca/jquery-3.3.1.min.js"></script>
-  <!-- DO NOT TOUCH -->
-
-  <script src="js/contents.js"></script>
-  <!-- Contains the injected menu system and some behavioural elements for the website, as well as pop up information -->
 
   <!-- These are needed for the Sliders to function. If your page is already using D3 you can skip these -->
   <script src="https://files.lib.kcvs.ca/d3.min.js" type="text/javascript"></script>
+
   <!-- <script src="https://files.lib.kcvs.ca/d3-selection.v1.min.js" type="text/javascript"></script>
     <script src="https://files.lib.kcvs.ca/d3-drag.v1.min.js" type="text/javascript"></script> -->
   <!-- The Slider Javascript -->
@@ -101,10 +74,9 @@
   <script src="https://files.lib.kcvs.ca/kcvs-graph.js" type="text/javascript"></script>
 
   <script src="https://files.lib.kcvs.ca/kcvsTheme.4.current.min.js" type="text/javascript"></script>
-  <!-- DO NOT TOUCH -->
 
-  <script src="js/electromagneticSpectrum.js" type="text/javascript"></script>
-  <!-- Replace this with js specific to your site or page. -->
+  <script src="js/electromagneticSpectru<!-- Replace this with js specific to your site or page. -->
+    m.js" type="text/javascript"></script>
 </body>
 
 </html>
