--- a/prove/index.html
+++ b/prove/index.html
@@ -75,8 +75,7 @@
 
   <script src="https://files.lib.kcvs.ca/kcvsTheme.4.current.min.js" type="text/javascript"></script>
 
-  <script src="js/electromagneticSpectru<!-- Replace this with js specific to your site or page. -->
-    m.js" type="text/javascript"></script>
+  <script src="js/electromagneticSpectrum.js" type="text/javascript"></script>
 </body>
 
 </html>
