--- a/prove/index.html
+++ b/prove/index.html
@@ -17,6 +17,12 @@
 </head>
 
 <body>
+  <h1 class="button" id="bottoneTitolo">COLOR PICKER</h1>
+  <div class="topTesto">
+   <h1 class="special"> 1. Choose an image</h1>
+   <h1 class="special"> 2. Use the cursor to choose a color</h1>
+   <h1 class="special"> 3. Watch the waves!</h1>
+ </div>
   <header>
     <div class="header">
       <div class="logo">
