--- a/prove/index.html
+++ b/prove/index.html
@@ -23,7 +23,7 @@
    <h1 class="special"> 2. Use the cursor to choose a color</h1>
    <h1 class="special"> 3. Watch the waves!</h1>
  </div>
-  <header>
+  <!-- <header>
     <div class="header">
       <div class="logo">
         <a href="#">
@@ -34,7 +34,7 @@
         <h1>Percezione del colore e onde luminose (Placeholder)</h1>
       </div>
     </div>
-  </header>
+  </header> -->
   <table>
     <thead>
       <tr>
@@ -42,11 +42,9 @@
           <span>Upload File</span>
           <input class="bottoneFile" type="file" name="filename" accept="image/gif, image/jpeg, image/png" onchange="readURL(this);" >
         </label>
-      </tr>
-      <tr>
-        <th>Immagine</th>
-        <th>Hovered Color</th>
-        <th>Selected Color</th>
+        <td>Source</td>
+        <td>Hovered</td>
+        <td>Selected</td>
       </tr>
     </thead>
     <tbody>
