--- a/prove/index.html
+++ b/prove/index.html
@@ -17,11 +17,11 @@
 </head>
 
 <body>
-  <h1 class="button" id="bottoneTitolo">COLOR PICKER</h1>
   <div class="topTesto">
-   <h1 class="special"> 1. Choose an image</h1>
-   <h1 class="special"> 2. Use the cursor to choose a color</h1>
-   <h1 class="special"> 3. Watch the waves!</h1>
+    <h1 class="special button" id="bottoneTitolo">COLOR PICKER</h1>
+    <h1 class="special"> 1. Choose an image</h1>
+    <h1 class="special"> 2. Use the cursor to choose a color</h1>
+    <h1 class="special"> 3. Watch the waves!</h1>
  </div>
   <!-- <header>
     <div class="header">
@@ -50,7 +50,7 @@
     <tbody>
       <tr>
         <td width="1%">
-          <canvas id="canvas" width="1000" height="1000"></canvas>
+          <canvas id="canvas" width="" height=""></canvas>
         </td>
         <td class="color-cell"><div id="hovered-color"></div></td>
         <td class="color-cell"><div id="selected-color"></div></td>
