Add background color to electromagnetic spectrum grid in CSS and update Italian translation for main header in HTML

--- a/prove/index.html
+++ b/prove/index.html
@@ -68,7 +68,7 @@
 
         <main id="mainContent">
 
-          <h1>Electromagnetic Spectrum</h1>
+          <h1>Spettro elettromagnetico</h1>
 
           <div id="waveViewContainer" class="waveViewContainer">
             <h3 class="waveTitle">Wave View</h3>
