--- a/nuovo/index.html
+++ b/nuovo/index.html
@@ -6,32 +6,24 @@
   <meta name="viewport" content="initial-scale=1" />
 
   <title>Electromagnetic Spectrum</title>
+  <link rel="stylesheet" href="font/SF.css" type="text/css" />
   <link rel="stylesheet" href="css/custom.css" type="text/css" />
   <link rel="stylesheet" href="css/electromagneticSpectrum.css" type="text/css" />
 </head>
 
 <body>
-  <div>
-    <ul class="starting_page">
-      <li><h1>Inserisci un'immagine</h1></li>
-      <li><h1>Prendi il colore</h1></li>
-      <li><h1>Scopri la frequenza</h1></li>
-      <li id="arrow"><a href="#temp"><i class="fa-solid fa-chevron-down fa-bounce fa-2xl"></i></a></li>
-      
-    </ul>
-
-    <section id="temp">
-      <p>Dio bestia</p>
-    </section>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
+  <div class="starting_page">
+    <div>
+      <h1>Inserisci un'immagine.</h1><br />
+      <h1>Prendi il colore.</h1><br />
+      <h1>Scopri la frequenza.</h1><br />
+      <a id="arrow" href="#temp"><i class="fa-solid fa-chevron-down fa-bounce fa-2xl"></i></a>
+    </div>
   </div>
+
+  <section id="temp">
+    <p>Dio bestia</p>
+  </section>
 
 
 
