--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="scroll">
-    <section>
+    <section id="start">
       <div class="starting_page">
         <div>
           <h1>Inserisci un'<span id="immagine">immagine</span>.</h1><br />
@@ -27,21 +27,34 @@
       <label for="images" class="drop-container">
         <span class="drop-title">Rilascia la tua immagine qua</span>
         o
-        <input type="file" id="images" accept="image/*" onchange="readURL(this);" required>
+        <input type="file" id="images" accept="image/*" onchange="loadImg(event)" required>
       </label>
       <a class="arrow" href="#color-picker"><i class="fa-solid fa-chevron-down fa-bounce fa-2xl"></i></a>
     </section>
 
     <section id="color-picker">
       <div class="color-container">
-        <canvas id="canvas"></canvas>
-        <div id="color-hue"></div>
+        <img id="imgInp" src="">
+        <div class="container">
+          <div id="result-box"></div>
+        </div>
+        <span id="result-text"></span>
       </div>
+
+      <!-- TODO: Non se metterlo e come metterlo -->
+      <!-- <div id="color-hue"></div> -->
+
+
+
+
+
+
+
       <a class="arrow" href="#grafico-1"><i class="fa-solid fa-chevron-down fa-bounce fa-2xl"></i></a>
     </section>
 
 
-
+    
 
 
 
@@ -106,7 +119,7 @@
 
 
   <!-- Javascript Scripts Go Here -->
-  <script src="https://files.lib.kcvs.ca/jquery-3.3.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
   <!-- These are needed for the Sliders to function. If your page is already using D3 you can skip these -->
   <script src="https://files.lib.kcvs.ca/d3.min.js" type="text/javascript"></script>
@@ -123,6 +136,14 @@
 
   <script src="js/custom.js" type="text/javascript"></script>
   <script src="js/electromagneticSpectrum.js" type="text/javascript"></script>
+
+  <script>
+    var loadImg = function(event) {
+    var image = document.getElementById('imgInp');
+    image.src = URL.createObjectURL(event.target.files[0]);
+    $('#color-picker')[0].scrollIntoView();
+  };
+  </script>
 </body>
 
 </html>
