codice pulito un pochetot

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 
   <script src="js/electromagneticSpectrum.js" type="text/javascript"></script>
 
+  <!-- Serve per visualizzare l'immagine (non so come funziona ma fa lo stesso l'importante è che funzioni) -->
   <script>
     var loadImg = function(event) {
     var image = document.getElementById('imgInp');
