--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <label for="images" class="drop-container">
         <span class="drop-title">Rilascia la tua immagine qua</span>
         o
-        <input type="file" id="images" accept="image/*" onchange="loadImg(event)" required>
+        <input type="file" id="images" accept="image/*" onchange="loadImg(event);drawCanvas(this);" required>
       </label>
       <a class="arrow" href="#color-picker"><i class="fa-solid fa-chevron-down fa-bounce fa-2xl"></i></a>
     </section>
@@ -35,6 +35,7 @@
     <section id="color-picker">
       <div class="color-container">
         <img id="imgInp" src="">
+        <canvas id="canvas"></canvas>
         <div class="container">
           <div id="result-box"></div>
         </div>
@@ -130,7 +131,7 @@
   <script src="https://files.lib.kcvs.ca/kcvs-slider.min.js" type="text/javascript"></script>
   <script src="https://files.lib.kcvs.ca/kcvs-graph.js" type="text/javascript"></script>
 
-  <script src="https://files.lib.kcvs.ca/kcvsTheme.4.current.min.js" type="text/javascript"></script>
+  <!-- <script src="https://files.lib.kcvs.ca/kcvsTheme.4.current.min.js" type="text/javascript"></script> -->
 
   <script src="https://kit.fontawesome.com/d45470356d.js" crossorigin="anonymous"></script>
 
