--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="initial-scale=1" />
 
-    <title>Electromagnetic Spectrum</title>
+    <title>Il linguaggio segreto dell'universo</title>
     <link rel="stylesheet" href="font/SF.css" type="text/css" />
     <link rel="stylesheet" href="css/custom.css" type="text/css" />
     <link
@@ -52,7 +52,8 @@
 
     <section id="color-picker">
       <div class="color-container">
-        <canvas class="canvas" id="canvas"><img id="imgInp" src="" /></canvas>
+        <img id="imgInp" src="" />
+        <canvas class="canvas" id="canvas"></canvas>
         <div class="container">
           <div class="result-box" id="result-box"></div>
         </div>
