scaricate tutte le dipendenze

--- a/index.html
+++ b/index.html
@@ -91,26 +91,23 @@
         <div id="energy" class="energy">Energy = 2.23 (eV)</div>
       </div>
     </section>
-    QUIII
 
     <!-- Javascript Scripts Go Here -->
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="js/jquery-3.6.0.js"></script>
 
     <!-- These are needed for the Sliders to function. If your page is already using D3 you can skip these -->
     <script
-      src="https://files.lib.kcvs.ca/d3.min.js"
+      src="js/d3.min.js"
       type="text/javascript"
     ></script>
 
-    <!-- <script src="https://files.lib.kcvs.ca/d3-selection.v1.min.js" type="text/javascript"></script>
-    <script src="https://files.lib.kcvs.ca/d3-drag.v1.min.js" type="text/javascript"></script> -->
-    <!-- The Slider Javascript -->
     <script
-      src="https://files.lib.kcvs.ca/kcvs-slider.min.js"
+      src="js/kcvs-slider.min.js"
       type="text/javascript"
     ></script>
+
     <script
-      src="https://files.lib.kcvs.ca/kcvs-graph.js"
+      src="js/kcvs-graph.js"
       type="text/javascript"
     ></script>
 
